zokrates_cli/examples/compile_errors/no_struct_equivalence.zok
struct Foo {}
struct Bar {}

def main() -> Foo {
    return Bar {};
}